--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -42,27 +42,38 @@
     font-size: 8px;
 }
 
+.social {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.socialTitle {
+    composes: formHeading;
+}
+
 .googleBtn {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 40px auto 0;
+    gap: 15px;
+    margin: 20px auto;
     width: 182px;
-    height: 40px;
-    border-radius: 20px;
-    border: none;
+    height: 46px;
+    font-weight: 700;
+    border: 2px solid var(--accent-color);
+    border-radius: 30px;
+    background-color: var(--bg-color);
+    color: var(--main-color);
+    box-shadow: var(--box-shadow);
     cursor: pointer;
-    box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
-    filter: drop-shadow(1px 2px 3px rgba(170, 178, 197, 0.2));
 }
 
 .googleBtn:hover,
 .googleBtn:focus {
     background-color: var(--accent-color);
-    box-shadow: 1px 3px 5px rgba(255, 107, 8, 0.35);
-    color: #ffffff;
-    transform: scale(1.1);
-    border: 4px solid #fc842d;
+    color: var(--bg-color);
+    border: 2px solid var(--accent-color);
+    transition: var(--transition);
 }
 
 .icon {
@@ -75,6 +86,19 @@
 }
 
 @media screen and (min-width: 768px) {
+    .container {
+        display: flex;
+        gap: 100px;
+    }
+
+    .social {
+        margin-top: 60px;
+    }
+
+    .socialTitle {
+        margin-bottom: 60px;
+    }
+
     .loginForm {
         margin-top: 60px;
         margin-left: 20px;
