--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -30,6 +30,7 @@
 }
 
 .modal {
+    transform: translate(50%, 50%);
     padding: 55px 20px 20px;
     text-align: center;
     border-radius: 10px;
@@ -51,6 +52,10 @@
     }
     .userMenuWrapper {
         max-width: var(--tablet);
+    }
+
+    .modal {
+        transform: none;
     }
 }
 
