--- a/src/components/ModalTeam/ModalTeam.module.css
+++ b/src/components/ModalTeam/ModalTeam.module.css
@@ -197,6 +197,7 @@
         flex-direction: column;
     }
     .member__title {
+        text-align: center;
         font-weight: bold;
         font-size: 15px;
         margin-top: 0;
@@ -254,7 +255,6 @@
     }
 
     .team__container {
-
         display: flex;
         align-items: center;
         justify-content: center;
@@ -277,15 +277,15 @@
         max-width: 280px;
         border-radius: 16px;
         box-shadow: 3px 7px 22px -7px rgba(0, 0, 0, 0.45);
-        
+
         cursor: pointer;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .card__wrapper:hover {
-        transform: scale(1.10);
+        transform: scale(1.1);
         animation: pulse-black2 5s infinite,
-        transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+            transform 2500ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .card {
@@ -309,6 +309,7 @@
         flex-direction: column;
     }
     .member__title {
+        text-align: center;
         font-weight: bold;
         font-size: 20px;
         margin-top: 0;
@@ -379,56 +380,56 @@
 }
 
 @keyframes pulse-black {
-  0% {
-    transform: scale(0.95);
-    border-radius: 50%;
-    box-shadow: 0 0 0 0 #ff751d;
-  }
-  50% {
-    transform: scale(1.1);
-    border-radius: 50%;
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-  }
-  100% {
-    transform: scale(0.95);
-    border-radius: 50%;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
+    0% {
+        transform: scale(0.95);
+        border-radius: 50%;
+        box-shadow: 0 0 0 0 #ff751d;
+    }
+    50% {
+        transform: scale(1.1);
+        border-radius: 50%;
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+    100% {
+        transform: scale(0.95);
+        border-radius: 50%;
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
 }
 @keyframes pulse-black2 {
-  0% {
-    /* transform: scale(0.95); */
-    border-radius: 16px;
-    box-shadow: 0 0 0 0 #ff751d;
-  }
-  50% {
-    /* transform: scale(1); */
-    border-radius: 16px;
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-  }
-  100% {
-    /* transform: scale(0.95); */
-    border-radius: 16px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
+    0% {
+        /* transform: scale(0.95); */
+        border-radius: 16px;
+        box-shadow: 0 0 0 0 #ff751d;
+    }
+    50% {
+        /* transform: scale(1); */
+        border-radius: 16px;
+        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+    100% {
+        /* transform: scale(0.95); */
+        border-radius: 16px;
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
 }
 @-webkit-keyframes rotate-90-cw {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-  }
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+    100% {
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
 }
 @keyframes rotate-90-cw {
-  0% {
-    -webkit-transform: rotate(0);
-    transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
-  }
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+    100% {
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+    }
 }
