--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -59,6 +59,7 @@
     margin: 20px auto;
     width: 182px;
     height: 46px;
+    font-size: 16px;
     font-weight: 700;
     border: 2px solid var(--accent-color);
     border-radius: 30px;
@@ -68,12 +69,36 @@
     cursor: pointer;
 }
 
+.facebookBtn {
+    composes: googleBtn;
+    color: #3b5998;
+    letter-spacing: -0.06em;
+    font-family: 'Bahnschrift';
+    font-size: 17px;
+}
+
 .googleBtn:hover,
 .googleBtn:focus {
     background-color: var(--accent-color);
     color: var(--bg-color);
     border: 2px solid var(--accent-color);
     transition: var(--transition);
+}
+
+.blue {
+    color: #1e88e5;
+}
+
+.red {
+    color: #e53935;
+}
+
+.yellow {
+    color: #ffb300;
+}
+
+.green {
+    color: #43a047;
 }
 
 .icon {
